# CodenameGogh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-gcc.sh  build-mingw.bat  build-msvc15.bat  build-msvc16.bat
cmake/: Qt5QuickShapesConfig.cmake  Qt5QuickTemplates2Config.cmake  utils.cmake
doc/: CommandReference.md  doxygen.conf
share/styles/: default.css
src/: CMakeLists.txt  Link.qml  Node.qml  Plug.qml  Slot.qml  main.qml  qml.qrc
src/Gogh/: ArgParse.cpp  ArgParse.h  CMakeLists.txt  DefaultNodeEditor.cpp  DefaultNodeEditor.h  EnvModel.cpp  EnvModel.h  FfmpegOutputParser.cpp  FfmpegOutputParser.h  FileProbeProcess.cpp  FileProbeProcess.h  Graph.cpp  Graph.h  ImageSequence.cpp  Link.cpp  Link.h  LinkGraphicsItem.cpp  LinkGraphicsItem.h  Logger.cpp  Logger.h  MainEventLoop.cpp  MainEventLoop.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowStyle.cpp  MainWindowStyle.h  Node.cpp  Node.h  NodeGraphModel.cpp  NodeGraphModel.h  NodeGraphScene.cpp  NodeGraphScene.h  NodeGraphView.cpp  NodeGraphView.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodeParmListView.cpp  NodeParmListView.h  NodeType.cpp  (+32 more)
src/Gogh/Dialogs/: EnvDialog.cpp  EnvDialog.h  EnvDialog.ui  RenderDialog.cpp
src/Gogh/Gui/: AbstractListModel.cpp  AbstractListModel.h  AbstractNodeSlotListModel.cpp  AbstractNodeSlotListModel.h  AbstractSlotListModel.cpp  AbstractSlotListModel.h  EdgeListModel.cpp  EdgeListModel.h  GraphMetaTypes.h  MainWindow.cpp  MainWindow.h  NodeInputListModel.cpp  NodeInputListModel.h  NodeListModel.cpp  NodeListModel.h  NodeOutputListModel.cpp  NodeOutputListModel.h  ParameterListModel.cpp  ParameterListModel.h  ParameterListView.cpp  ParameterListView.h  ParameterTypeDelegate.cpp  ParameterTypeDelegate.h
src/Gogh/Nodes/: CodecNode.cpp  CodecNode.h  CodecNode.ui  FramerateNode.cpp  FramerateNode.h  InputNode.cpp  InputNode.h  InputNode.ui  MixNode.cpp  MixNode.h  MixNode.ui  OutputNode.cpp  OutputNode.h  OutputNode.ui  OutputNodeEditor.cpp  OutputNodeEditor.h  ScaleNode.cpp  ScaleNode.h  ScaleNode.ui  TestNode.cpp  TestNode.h  TestNode.ui
src/Gogh/Tools/: AbstractGraphTool.h  CutTool.cpp  CutTool.h  PanTool.cpp  PanTool.h
src/Gogh/Ui/: ExtraUi.hpp  LinkItem.cpp  LinkItem.h  MainLayout.h  NodeArea.cpp  NodeArea.h  NodeAreaItems.h  NodeDelegate.cpp  NodeDelegate.h  NodeItem.cpp  NodeItem.h  ParameterDelegate.cpp  ParameterDelegate.h  ParameterWidget.cpp  ParameterWidget.h  QuadTree.cpp  QuadTree.h  SlotItem.h  UiApp.cpp  UiApp.h  UiBase.h  UiBoxLayout.inc.h  UiButton.cpp  UiButton.h  UiCheckbox.cpp  UiCheckbox.h  UiContextMenu.cpp  UiContextMenu.h  UiEnumInput.cpp  UiEnumInput.h  UiFloatting.cpp  UiFloatting.h  UiIntInput.cpp  UiIntInput.h  UiMenu.h  UiRect.h  UiTextInput.cpp  UiTextInput.h  UiWindow.cpp  UiWindow.h
src/Gogh/dialogs/: AboutDialog.cpp  AboutDialog.h  RenderDialog.h  RenderDialog.ui  WelcomeDialog.h  WelcomeDialog.ui
src/Gogh/nodes/: AacCodecDataModel.cpp  AacCodecDataModel.h  AbstractCodecData.h  AbstractStreamData.h  AudioCodecData.h  FdkAacCodecDataModel.h  FileInputDataModel.cpp  FileInputDataModel.h  FileOutputDataModel.cpp  H264CodecDataModel.cpp  H264CodecDataModel.h  SubtitleStreamData.h  VideoStreamData.h
src/Gogh/polyfill/: variant.hpp
src/Gogh/qml/: EdgeDelegate.qml  NodeDelegate.qml  NodeGraphModel.qml  NodeGraphView.qml  NodeModel.qml  NodeView.qml  ParameterListView.qml  VerticalHandleDelegate.qml  main.qml
src/Gogh/qml/NodeDelegate/: NodeHeader.qml  Slot.qml
src/Gogh/resources/: NodeEditorStyle.json  resources.qrc
src/Gogh/utils/: FileStream.h  debug.cpp  debug.h  fileutils.cpp  fileutils.h  misc.cpp  misc.h  stringlist.cpp  stringlist.h  strutils.cpp  strutils.h
src/Gogh/widgets/: AddNodeMenu.h  AddNodeMenu.ui  FileInputWidget.cpp  GoghFlowView.cpp  GoghFlowView.h
src/QNodeEditorTest/: CMakeLists.txt  FileInputDataModel.cpp  FileInputDataModel.h  FileOutputDataModel.cpp  FileOutputDataModel.h  FileProbeProcess.cpp  GoghFlowScene.cpp  GoghFlowScene.h  ImageSequence.h  ImageSequenceDetector.cpp  ImageSequenceDetector.h  MainWindow.cpp  MainWindow.h  NumberSourceDataModel.cpp  RenderCommand.cpp  RenderCommand.h  Style.cpp  Style.h  main.cpp
src/QNodeEditorTest/dialogs/: AboutDialog.cpp  AboutDialog.ui  RenderDialog.cpp  RenderDialog.h  WelcomeDialog.cpp  WelcomeDialog.h  WelcomeDialog.ui
src/QNodeEditorTest/nodes/: AacCodecDataModel.cpp  AacCodecDataModel.h  AbstractStreamData.h  AudioStreamData.h  CodecData.h  DataCodecData.h  DataStreamData.h  FdkAacCodecDataModel.cpp  FileInputDataModel.cpp  FileInputDataModel.h  FileOutputDataModel.cpp  FileOutputDataModel.h  H264CodecDataModel.cpp  H264CodecDataModel.h  Mp3CodecDataModel.cpp  Mp3CodecDataModel.h  NumberDisplayDataModel.cpp  SubtitleCodecData.h  VideoCodecData.h  VideoStreamData.h
src/QNodeEditorTest/resources/: resources.qrc
src/QNodeEditorTest/widgets/: AddNodeMenu.cpp  ClickableWidget.cpp  ClickableWidget.h  FileInputWidget.cpp  FileInputWidget.h  GoghFlowView.cpp  GoghFlowView.h
src/nodeeditor/: CMakeLists.txt
src/nodeeditor/include/nodes/internal/: Connection.hpp  ConnectionGeometry.hpp  DataModelRegistry.hpp  FlowScene.hpp  FlowView.hpp  NodeDataModel.hpp  NodeGeometry.hpp  (+3 more)
src/nodeeditor/resources/: DefaultStyle.json
src/nodeeditor/src/: Connection.cpp  ConnectionGeometry.cpp  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionStyle.cpp  DataModelRegistry.cpp  FlowScene.cpp  FlowView.cpp  NodeConnectionInteraction.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodePainter.hpp  NodeStyle.cpp
test/: CMakeLists.txt  test_graph.cpp
test/data/sample-ffmpeg-output/encode/: ffmpeg000.err  ffmpeg001.err  ffmpeg002.err  ffmpeg003.err  ffmpeg004.err  ffmpeg005.err  ffmpeg006.err  ffmpeg007.err  ffmpeg008.err  ffmpeg009.err  ffmpeg010.err  ffmpeg011.err  ffmpeg012.err  ffmpeg013.err  ffmpeg014.err  ffmpeg015.err  ffmpeg016.err  ffmpeg017.err  ffmpeg018.err  ffmpeg019.err  ffmpeg020.err  ffmpeg021.err  ffmpeg022.err  ffmpeg023.err  ffmpeg024.err  ffmpeg025.err
test/data/sample-ffmpeg-output/overwrite/: ffmpeg001.err
